--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,5 @@ POSTGRES_USER=admin
 POSTGRES_PASSWORD=admin
 POSTGRES_DB=webshopdb
 PORT=5000
+JWT_EXPIRATION_TIME=
+JWT_SECRET=Ssdie90283ki8288o283928dlsadkjaldifo2oielkjasdfasdf
